fixed overlap

--- a/style.css
+++ b/style.css
@@ -70,6 +70,4 @@
 
 .browse_words {
     padding: 100px;
-    height: 100vh;
-    min-height: 500px;
 }
